--- a/style.css
+++ b/style.css
@@ -1,10 +1,92 @@
-@import url("https://fonts.googleapis.com/css2?family=Indie+Flower");
+@media (max-width: 1200px) {
+  .main {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 850px) {
+  .main {
+    gap: 50px;
+  }
+
+  .settings {
+    width: 150px;
+    gap: 16px;
+  }
+
+  .size-value {
+    margin-bottom: -4px;
+  }
+
+  .grid {
+    width: 400px;
+    height: 400px;
+  }
+}
+
+@media (max-width: 650px) {
+  .title {
+    font-size: 50px;
+  }
+
+  .main {
+    flex-direction: column-reverse;
+  }
+
+  .grid {
+    width: 300px;
+    height: 300px;
+  }
+}
+@-webkit-keyframes bgChangeAnimation {
+  0% {
+    background-position: 53% 0%;
+  }
+  50% {
+    background-position: 48% 100%;
+  }
+  100% {
+    background-position: 53% 0%;
+  }
+}
+@-moz-keyframes bgChangeAnimation {
+  0% {
+    background-position: 53% 0%;
+  }
+  50% {
+    background-position: 48% 100%;
+  }
+  100% {
+    background-position: 53% 0%;
+  }
+}
+@keyframes bgChangeAnimation {
+  0% {
+    background-position: 53% 0%;
+  }
+  50% {
+    background-position: 48% 100%;
+  }
+  100% {
+    background-position: 53% 0%;
+  }
+}
+
+@keyframes fadeInRight {
+  from {
+    opacity: 0;
+    transform: translateX(300px);
+  }
+  to {
+    opacity: 1;
+  }
+}
 
 :root {
-  --primary: #4fa3a5;
-  --seconday: #63c5ea;
-  --tertiary: #fa5396;
-  --quartenary: #fcb424;
+  --primary-dark: #333;
+  --primary-light: #ededed;
+  --secondary-light: #fefefe;
+  --active: #183a1d;
 }
 
 *,
@@ -16,70 +98,174 @@
 }
 
 html {
-  /* footer support */
   position: relative;
   min-height: 100%;
 }
 
-main {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-.cell {
-  border: 1px solid gray;
-  min-width: 20px;
-  min-height: 20px;
-  display: inline-block;
-  margin-right: 2px;
+body {
+  background: linear-gradient(335deg, #fefbe9, #e1eedd, #f0a04b);
+  background-size: 600% 600%;
+
+  -webkit-animation: bgChangeAnimation 10s ease infinite;
+  -moz-animation: bgChangeAnimation 10s ease infinite;
+  animation: bgChangeAnimation 10s ease infinite;
+  font-family: 'Lato', sans-serif;
+  line-height: 1.6;
+  /* footer support */
+  margin-bottom: 100px;
 }
 
-.hover {
-  background-color: black;
+h1 {
+  line-height: 1.2;
 }
 
-header {
-  font-family: "Indie Flower", serif;
+button,
+input {
+  width: 100%;
+  border: none;
+  color: inherit;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: pointer;
+  outline: none;
+}
+
+/* HEADER */
+
+.header {
+  padding: 30px 0;
+}
+
+.title {
   text-align: center;
-  font-size: 40px;
-  background-color: var(--primary);
+  font-size: 80px;
 }
 
-main {
+/* MAIN */
+
+.main {
   display: flex;
-  gap: 4rem;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
   align-items: center;
+  justify-content: flex-start;
+  gap: 100px;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
-#buttons {
+.settings {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  width: 200px;
 }
 
-footer {
+button {
+  padding: 10px 20px;
+  border: 1px solid var(--primary-dark);
+  border-radius: 5px;
+}
+
+button.active {
+  background-color: var(--active);
+  color: var(--primary-light);
+}
+
+button,
+input[type='color'] {
+  background-color: transparent;
+  transition: transform 0.1s ease-in-out;
+}
+
+button:hover,
+input[type='color']:hover {
+  transform: scale(1.05);
+}
+
+input[type='color']:active {
+  transition: transform 0.05s ease-in-out;
+  transform: scale(1);
+}
+
+input[type='color'] {
+  -webkit-appearance: none;
+  width: 80px;
+  height: 80px;
+  border: none;
+}
+a {
+  animation: fadeInRight 1s ease-in-out;
+}
+input[type='color']::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+
+input[type='color']::-webkit-color-swatch {
+  border: none;
+  border-radius: 50px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.size-value {
+  margin-bottom: -20px;
+  font-size: 20px;
+}
+
+input[type='range'] {
+  -webkit-appearance: none;
+  background-color: var(--primary-light);
+}
+
+input[type='range']::-webkit-slider-runnable-track {
+  height: 10px;
+  border: 1px solid var(--primary-dark);
+  border-radius: 25px;
+  background: var(--secondary-light);
+}
+
+input[type='range']::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 24px;
+  height: 24px;
+  border-radius: 25px;
+  margin-top: -8px;
+  background: var(--primary-dark);
+}
+
+.grid {
+  display: grid;
+  width: 500px;
+  height: 500px;
+  background-color: var(--secondary-light);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.grid-element {
+  user-select: none;
+}
+
+/* FOOTER */
+
+.footer {
   position: absolute;
   bottom: 0;
+  left: 0;
   display: flex;
-  font-family: "Montserrat Medium";
+  align-items: center;
   justify-content: center;
-  background-color: var(--primary);
-  font-size: 18px;
-  color: black;
-  padding: 2rem;
-  width: 100%;
   gap: 10px;
-}
-
-i {
-  color: var(--quartenary)
-}
-
-.slidercontainer {
   width: 100%;
+  padding: 10px;
+  font-size: 20px;
 }
 
-#area {
-  text-align: center;
+.fa-github {
+  color: var(--primary-dark);
+  font-size: 24px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.fa-github:hover {
+  transform: rotate(360deg) scale(1.2);
 }
